--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,7 @@
     "tabs"
   ],
   "background": {
-    "scripts": ["background.js"],
+    "scripts": ["js/background.js"],
     "persistent": true
   }
 }
